# zotero-fulltext-cli

./: LICENSE  README.md  pyproject.toml
src/: fulltext_to_markdown.py
