[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-fulltext-cli"
version = "0.1.0"
description = "CLI tool for Zotero fulltext download"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "syslira-tools @ git+https://github.com/RaikoPipe/syslira-tools.git",
    "loguru",
    "pathvalidate",
]

[project.scripts]
zotero-fulltext = "src.fulltext_to_markdown:main"

[project.urls]
Homepage = "https://github.com/yourusername/zotero-fulltext-cli"
Repository = "https://github.com/yourusername/zotero-fulltext-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]